--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -109,6 +109,7 @@ jobs:
 
       - name: Deploy BankApp Chart
         run: |
+          kubectl create namespace devproject || true
           helm upgrade --install bankapp helm/bankapp-chart \
           --namespace bankapp \
           --create-namespace \
