--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,11 +1,11 @@
 name: CD Pipeline
 
-# on:
-#   workflow_run:
-#     workflows: ["CI Pipeline"]
-#     types:
-#       - completed
-      
+  # on:
+  #   workflow_run:
+  #     workflows: ["CI Pipeline"]
+  #     types:
+  #       - completed
+
 #   push:
 #     branches:
 #       - main
@@ -61,22 +61,22 @@ jobs:
 
       - name: Check versions
         run: |
-         terraform -version
-         terragrunt -version    
-
-      # - name: Create external-secrets namespace
-      #   run: |
-      #     kubectl create namespace external-secrets || true
-      # - name: Patch orphaned resources for Helm ownership
-      #   run: |
-      #     for sa in external-secrets-cert-controller external-secrets-webhook; do
-      #       kubectl annotate serviceaccount $sa \
-      #         -n external-secrets \
-      #         meta.helm.sh/release-name=external-secrets \
-      #         meta.helm.sh/release-namespace=external-secrets \
-      #         --overwrite || echo "ServiceAccount $sa not found or already patched"
-      #     done
+          terraform -version
+          terragrunt -version    
           
+          # - name: Create external-secrets namespace
+          #   run: |
+          #     kubectl create namespace external-secrets || true
+          # - name: Patch orphaned resources for Helm ownership
+          #   run: |
+          #     for sa in external-secrets-cert-controller external-secrets-webhook; do
+          #       kubectl annotate serviceaccount $sa \
+          #         -n external-secrets \
+          #         meta.helm.sh/release-name=external-secrets \
+          #         meta.helm.sh/release-namespace=external-secrets \
+          #         --overwrite || echo "ServiceAccount $sa not found or already patched"
+          #     done
+
       # - name: Patch orphaned ServiceAccount for Helm ownership
       #   run: |
       #     kubectl annotate serviceaccount external-secrets-cert-controller \
@@ -84,20 +84,24 @@ jobs:
       #       meta.helm.sh/release-name=external-secrets \
       #       meta.helm.sh/release-namespace=external-secrets \
       #       --overwrite || echo "ServiceAccount not found or already patched"
+      - name: Ensure required namespaces exist
+        run: |
+         set -e
+         for ns in external-secrets bankapp argocd devproject; do
+          kubectl get namespace "$ns" >/dev/null 2>&1 || kubectl create namespace "$ns"
+         done
 
       - name: Deploy External Secrets IRSA (Terraform)
         run: |
           cd infra/resources
           terragrunt init
           terragrunt apply --terragrunt-non-interactive -auto-approve --terragrunt-log-level debug
-          
+
       - name: Add Helm repositories
         run: |
-         helm repo add external-secrets https://charts.external-secrets.io
-         helm repo update
-         # helm repo add argo https://argoproj.github.io/argo-helm
-        
-         
+          helm repo add external-secrets https://charts.external-secrets.io
+          helm repo update
+          # helm repo add argo https://argoproj.github.io/argo-helm
 
       - name: Deploy External Secrets
         run: |
@@ -116,7 +120,7 @@ jobs:
           --wait --timeout 300s
           kubectl apply -f helm/manifests/secretstore.yaml
           kubectl apply -f helm/manifests/secrets/bankapp/externalsecret-mysql.yaml
-          
+
       # ----------------------------
       # ArgoCD + External Secrets
       # ----------------------------
@@ -133,15 +137,15 @@ jobs:
       #     kubectl create namespace argocd || true
       #     kubectl apply -n argocd -f https://github.com/karty11/Kube/blob/main/Project_EKS/Argocd/argocdserver.yaml
       #     kubectl rollout status deployment/argocd-server -n argocd --timeout=180s
-     
+
       # - name: Get ArgoCD LoadBalancer IP
       #   id: get_ip
       #   run: |
       #    LB_IP=$(kubectl get svc argocd-server -n argocd -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-      #    echo "ARGOCD_LB_IP=$LB_IP" >> $GITHUB_ENV  
+      #    echo "ARGOCD_LB_IP=$LB_IP" >> $GITHUB_ENV
 
       - name: Apply ArgoCD Ingress
-        run: kubectl apply -f helm/ingress/argocd-ingress.yaml   
+        run: kubectl apply -f helm/ingress/argocd-ingress.yaml
 
       - name: Apply ESO ArgoCD Application
         run: |
